--- a/nginx.conf
+++ b/nginx.conf
@@ -28,6 +28,10 @@ http {
                 return 204;
             }
 
+            # Add CORS headers for all other requests
+            add_header 'Access-Control-Allow-Origin' 'https://www.repeeker.com' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+
             proxy_pass http://nodejs_backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
