token logic updated

--- a/env.production.template
+++ b/env.production.template
@@ -8,6 +8,8 @@ REDIS_PASSWORD=your_redis_password
 
 # Application Configuration
 JWT_SECRET=your_jwt_secret_32_chars_minimum
+JWT_ACCESS_SECRET=your_jwt_access_secret_32_chars_minimum
+JWT_REFRESH_SECRET=your_jwt_refresh_secret_32_chars_minimum
 NEXTAUTH_SECRET=your_nextauth_secret_32_chars_minimum
 CORS_ORIGIN=https://www.repeeker.com
 PORT=8080
