--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -63,6 +63,8 @@ services:
       - DATABASE_URL=postgresql://${POSTGRES_USER:-repeeker_user}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB:-repeeker_db}
       - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379
       - JWT_SECRET=${JWT_SECRET}
+      - JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}
+      - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}
       - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
       - CORS_ORIGIN=${CORS_ORIGIN}
       - PORT=8080
