--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
   redis:
     image: redis:7-alpine
     container_name: repeeker_redis
+    command: redis-server --requirepass redis_password
     ports:
       - "6379:6379"
     volumes:
@@ -48,12 +49,16 @@ services:
     environment:
       - NODE_ENV=development
       - DATABASE_URL=postgresql://repeeker_user:repeeker_password@postgres:5432/repeeker_db
-      - REDIS_URL=redis://redis:6379
+      - REDIS_URL=redis://:redis_password@redis:6379
       - JWT_SECRET=dev-jwt-secret-change-in-production
+      - JWT_ACCESS_SECRET=dev-jwt-access-secret-change-in-production
+      - JWT_REFRESH_SECRET=dev-jwt-refresh-secret-change-in-production
       - NEXTAUTH_SECRET=dev-nextauth-secret-change-in-production
       - CORS_ORIGIN=http://localhost:3000
       - PORT=8080
       - LOG_LEVEL=debug
+      - OPENAI_API_KEY=your_openai_api_key
+      - OPENAI_MODEL=gpt-4-turbo-preview
     ports:
       - "8080:8080"
     volumes:
@@ -84,12 +89,14 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./ssl:/etc/nginx/ssl:ro
+      - ./logs:/var/log/nginx
     depends_on:
       - app
     networks:
       - repeeker_network
     profiles:
       - production
+    restart: unless-stopped
 
 volumes:
   postgres_data:
